"dark mode fixed with old section updatation"

--- a/assets/css/dark-mode.css
+++ b/assets/css/dark-mode.css
@@ -19,8 +19,29 @@
 
   body.dark-mode #hero button.toggle::before {
     background: #444;
+    box-shadow: rgb(255 255 255) 0px 0px 11px 0px, rgb(255 255 255) -3px -15px 19px -40px;
   }
 
   body.dark-mode #hero button.toggle i {
     color: #f9f9f9;
+  }
+
+  body.dark-mode #hero .bulb-off {
+    display: none;
+  }
+
+  body.dark-mode #hero .bulb-on {
+    display: block;
+  }
+
+  body.dark-mode #hero .bulb-on .lights {
+    position: absolute;
+    top: 8%;
+    left: 19%;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: linear-gradient(180deg, rgba(249, 252, 136, 1) 16%, rgba(255, 184, 41, 1) 41%, rgba(255, 130, 41, 1) 80%);
+    box-shadow: rgb(249 245 127) 0px -3px 143px 35px, rgb(255 247 0) -3px -3px 86px 12px;
+    z-index: -2;
   }
